@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2000, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2000, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,15 +25,17 @@
 
 package sun.nio.ch;
 
+import java.io.Closeable;
 import java.io.FileDescriptor;
 import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
 import java.lang.ref.Cleaner.Cleanable;
 import java.nio.ByteBuffer;
 import java.nio.MappedByteBuffer;
 import java.nio.channels.AsynchronousCloseException;
+import java.nio.channels.Channel;
 import java.nio.channels.ClosedByInterruptException;
 import java.nio.channels.ClosedChannelException;
 import java.nio.channels.FileChannel;
@@ -64,18 +66,12 @@ import jdk.internal.access.foreign.UnmapperProxy;
 public class FileChannelImpl
     extends FileChannel
 {
-    // Memory allocation size for mapping buffers
-    private static final long allocationGranularity;
-
     // Access to FileDescriptor internals
     private static final JavaIOFileDescriptorAccess fdAccess =
         SharedSecrets.getJavaIOFileDescriptorAccess();
 
-    // Maximum direct transfer size
-    private static final int MAX_DIRECT_TRANSFER_SIZE;
-
     // Used to make native read and write calls
-    private final FileDispatcher nd;
+    private static final FileDispatcher nd = new FileDispatcherImpl();
 
     // File descriptor
     private final FileDescriptor fd;
@@ -85,7 +81,7 @@ public class FileChannelImpl
     private final boolean readable;
 
     // Required to prevent finalization of creating stream (immutable)
-    private final Object parent;
+    private final Closeable parent;
 
     // The path of the referenced file
     // (null if the parent stream is created with a file descriptor)
@@ -127,15 +123,14 @@ public class FileChannelImpl
     }
 
     private FileChannelImpl(FileDescriptor fd, String path, boolean readable,
-                            boolean writable, boolean direct, Object parent)
+                            boolean writable, boolean direct, Closeable parent)
     {
         this.fd = fd;
+        this.path = path;
         this.readable = readable;
         this.writable = writable;
-        this.parent = parent;
-        this.path = path;
         this.direct = direct;
-        this.nd = new FileDispatcherImpl();
+        this.parent = parent;
         if (direct) {
             assert path != null;
             this.alignment = nd.setDirectIO(fd, path);
@@ -151,11 +146,12 @@ public class FileChannelImpl
             CleanerFactory.cleaner().register(this, new Closer(fd));
     }
 
-    // Used by FileInputStream.getChannel(), FileOutputStream.getChannel
-    // and RandomAccessFile.getChannel()
+
+    // Used by FileInputStream::getChannel, FileOutputStream::getChannel,
+    // and RandomAccessFile::getChannel
     public static FileChannel open(FileDescriptor fd, String path,
                                    boolean readable, boolean writable,
-                                   boolean direct, Object parent)
+                                   boolean direct, Closeable parent)
     {
         return new FileChannelImpl(fd, path, readable, writable, direct, parent);
     }
@@ -199,27 +195,27 @@ public class FileChannelImpl
         threads.signalAndWait();
 
         if (parent != null) {
-
+            //
             // Close the fd via the parent stream's close method.  The parent
             // will reinvoke our close method, which is defined in the
             // superclass AbstractInterruptibleChannel, but the isOpen logic in
             // that method will prevent this method from being reinvoked.
             //
-            ((java.io.Closeable)parent).close();
-        } else if (closer != null) {
+            parent.close();
+        } else { // parent == null hence closer != null
+            //
             // Perform the cleaning action so it is not redone when
             // this channel becomes phantom reachable.
+            //
             try {
                 closer.clean();
             } catch (UncheckedIOException uioe) {
                 throw uioe.getCause();
             }
-        } else {
-            fdAccess.close(fd);
         }
-
     }
 
+    @Override
     public int read(ByteBuffer dst) throws IOException {
         ensureOpen();
         if (!readable)
@@ -251,6 +247,7 @@ public class FileChannelImpl
         }
     }
 
+    @Override
     public long read(ByteBuffer[] dsts, int offset, int length)
         throws IOException
     {
@@ -286,6 +283,7 @@ public class FileChannelImpl
         }
     }
 
+    @Override
     public int write(ByteBuffer src) throws IOException {
         ensureOpen();
         if (!writable)
@@ -318,6 +316,7 @@ public class FileChannelImpl
         }
     }
 
+    @Override
     public long write(ByteBuffer[] srcs, int offset, int length)
         throws IOException
     {
@@ -354,6 +353,7 @@ public class FileChannelImpl
 
     // -- Other operations --
 
+    @Override
     public long position() throws IOException {
         ensureOpen();
         synchronized (positionLock) {
@@ -383,6 +383,7 @@ public class FileChannelImpl
         }
     }
 
+    @Override
     public FileChannel position(long newPosition) throws IOException {
         ensureOpen();
         if (newPosition < 0)
@@ -412,6 +413,7 @@ public class FileChannelImpl
         }
     }
 
+    @Override
     public long size() throws IOException {
         ensureOpen();
         synchronized (positionLock) {
@@ -439,6 +441,7 @@ public class FileChannelImpl
         }
     }
 
+    @Override
     public FileChannel truncate(long newSize) throws IOException {
         ensureOpen();
         if (newSize < 0)
@@ -516,6 +519,7 @@ public class FileChannelImpl
         }
     }
 
+    @Override
     public void force(boolean metaData) throws IOException {
         ensureOpen();
         int rv = -1;
@@ -540,110 +544,203 @@ public class FileChannelImpl
         }
     }
 
-    // Assume at first that the underlying kernel supports sendfile();
+    // Assume at first that the underlying kernel supports sendfile/equivalent;
     // set this to true if we find out later that it doesn't
     //
-    private static volatile boolean transferToNotSupported;
+    private static volatile boolean transferToDirectNotSupported;
 
-    // Assume that the underlying kernel sendfile() will work if the target
-    // fd is a pipe; set this to false if we find out later that it doesn't
+    // Assume at first that the underlying kernel supports copy_file_range/equivalent;
+    // set this to true if we find out later that it doesn't
     //
-    private static volatile boolean pipeSupported = true;
+    private static volatile boolean transferFromDirectNotSupported;
 
-    // Assume that the underlying kernel sendfile() will work if the target
-    // fd is a file; set this to false if we find out later that it doesn't
-    //
-    private static volatile boolean fileSupported = true;
-
-    private long transferToDirectlyInternal(long position, int icount,
-                                            WritableByteChannel target,
-                                            FileDescriptor targetFD)
-        throws IOException
-    {
-        assert !nd.transferToDirectlyNeedsPositionLock() ||
-               Thread.holdsLock(positionLock);
-
-        long n = -1;
-        int ti = -1;
-        try {
-            beginBlocking();
-            ti = threads.add();
-            if (!isOpen())
-                return -1;
-            boolean append = fdAccess.getAppend(targetFD);
-            do {
-                long comp = Blocker.begin();
-                try {
-                    n = transferTo0(fd, position, icount, targetFD, append);
-                } finally {
-                    Blocker.end(comp);
-                }
-            } while ((n == IOStatus.INTERRUPTED) && isOpen());
-            if (n == IOStatus.UNSUPPORTED_CASE) {
-                if (target instanceof SinkChannelImpl)
-                    pipeSupported = false;
-                if (target instanceof FileChannelImpl)
-                    fileSupported = false;
-                return IOStatus.UNSUPPORTED_CASE;
-            }
-            if (n == IOStatus.UNSUPPORTED) {
-                // Don't bother trying again
-                transferToNotSupported = true;
-                return IOStatus.UNSUPPORTED;
-            }
-            return IOStatus.normalize(n);
-        } finally {
+    /**
+     * Marks the beginning of a transfer to or from this channel.
+     * @throws ClosedChannelException if channel is closed
+     */
+    private int beforeTransfer() throws ClosedChannelException {
+        int ti = threads.add();
+        if (isOpen()) {
+            return ti;
+        } else {
             threads.remove(ti);
-            end (n > -1);
+            throw new ClosedChannelException();
         }
     }
 
-    private long transferToDirectly(long position, int icount,
-                                    WritableByteChannel target)
+    /**
+     * Marks the end of a transfer to or from this channel.
+     * @throws AsynchronousCloseException if not completed and the channel is closed
+     */
+    private void afterTransfer(boolean completed, int ti) throws AsynchronousCloseException {
+        threads.remove(ti);
+        if (!completed && !isOpen()) {
+            throw new AsynchronousCloseException();
+        }
+    }
+
+    /**
+     * Invoked when ClosedChannelException is thrown during a transfer. This method
+     * translates it to an AsynchronousCloseException or ClosedByInterruptException. In
+     * the case of ClosedByInterruptException, it ensures that this channel and the
+     * source/target channel are closed.
+     */
+    private AsynchronousCloseException transferFailed(ClosedChannelException cce, Channel other) {
+        ClosedByInterruptException cbie = null;
+        if (cce instanceof ClosedByInterruptException e) {
+            assert Thread.currentThread().isInterrupted();
+            cbie = e;
+        } else if (!uninterruptible && Thread.currentThread().isInterrupted()) {
+            cbie = new ClosedByInterruptException();
+        }
+        if (cbie != null) {
+            try {
+                this.close();
+            } catch (IOException ioe) {
+                cbie.addSuppressed(ioe);
+            }
+            try {
+                other.close();
+            } catch (IOException ioe) {
+                cbie.addSuppressed(ioe);
+            }
+            return cbie;
+
+        }
+        // one of the channels was closed during the transfer
+        if (cce instanceof AsynchronousCloseException ace) {
+            return ace;
+        } else {
+            var ace = new AsynchronousCloseException();
+            ace.addSuppressed(cce);
+            return ace;
+        }
+    }
+
+    /**
+     * Transfers bytes from this channel's file to the resource that the given file
+     * descriptor is connected to.
+     */
+    private long transferToFileDescriptor(long position, int count, FileDescriptor targetFD) {
+        long n;
+        boolean append = fdAccess.getAppend(targetFD);
+        do {
+            long comp = Blocker.begin();
+            try {
+                n = nd.transferTo(fd, position, count, targetFD, append);
+            } finally {
+                Blocker.end(comp);
+            }
+        } while ((n == IOStatus.INTERRUPTED) && isOpen());
+        return n;
+    }
+
+    /**
+     * Transfers bytes from this channel's file to the given channel's file.
+     */
+    private long transferToFileChannel(long position, int count, FileChannelImpl target)
         throws IOException
     {
-        if (transferToNotSupported)
-            return IOStatus.UNSUPPORTED;
-
-        FileDescriptor targetFD = null;
-        if (target instanceof FileChannelImpl) {
-            if (!fileSupported)
-                return IOStatus.UNSUPPORTED_CASE;
-            targetFD = ((FileChannelImpl)target).fd;
-        } else if (target instanceof SelChImpl) {
-            // Direct transfer to pipe causes EINVAL on some configurations
-            if ((target instanceof SinkChannelImpl) && !pipeSupported)
-                return IOStatus.UNSUPPORTED_CASE;
-
-            // Platform-specific restrictions. Now there is only one:
-            // Direct transfer to non-blocking channel could be forbidden
-            SelectableChannel sc = (SelectableChannel)target;
-            if (!nd.canTransferToDirectly(sc))
-                return IOStatus.UNSUPPORTED_CASE;
-
-            targetFD = ((SelChImpl)target).getFD();
+        final FileChannelImpl source = this;
+        boolean completed = false;
+        try {
+            beginBlocking();
+            int sourceIndex = source.beforeTransfer();
+            try {
+                int targetIndex = target.beforeTransfer();
+                try {
+                    long n = transferToFileDescriptor(position, count, target.fd);
+                    completed = (n >= 0);
+                    return IOStatus.normalize(n);
+                } finally {
+                    target.afterTransfer(completed, targetIndex);
+                }
+            } finally {
+                source.afterTransfer(completed, sourceIndex);
+            }
+        } finally {
+            endBlocking(completed);
         }
+    }
 
-        if (targetFD == null)
-            return IOStatus.UNSUPPORTED;
-        int thisFDVal = IOUtil.fdVal(fd);
-        int targetFDVal = IOUtil.fdVal(targetFD);
-        if (thisFDVal == targetFDVal) // Not supported on some configurations
-            return IOStatus.UNSUPPORTED;
+    /**
+     * Transfers bytes from this channel's file to the given channel's socket.
+     */
+    private long transferToSocketChannel(long position, int count, SocketChannelImpl target)
+        throws IOException
+    {
+        final FileChannelImpl source = this;
+        boolean completed = false;
+        try {
+            beginBlocking();
+            int sourceIndex = source.beforeTransfer();
+            try {
+                target.beforeTransferTo();
+                try {
+                    long n = transferToFileDescriptor(position, count, target.getFD());
+                    completed = (n >= 0);
+                    return IOStatus.normalize(n);
+                } finally {
+                    target.afterTransferTo(completed);
+                }
+            } finally {
+                source.afterTransfer(completed, sourceIndex);
+            }
+        } finally {
+            endBlocking(completed);
+        }
+    }
 
+    /**
+     * Transfers bytes from this channel's file from the given channel's file. This
+     * implementation uses sendfile, copy_file_range or equivalent.
+     */
+    private long transferToDirectInternal(long position, int count, WritableByteChannel target)
+        throws IOException
+    {
+        assert !nd.transferToDirectlyNeedsPositionLock() || Thread.holdsLock(positionLock);
+
+        return switch (target) {
+            case FileChannelImpl fci  -> transferToFileChannel(position, count, fci);
+            case SocketChannelImpl sci -> transferToSocketChannel(position, count, sci);
+            default -> IOStatus.UNSUPPORTED_CASE;
+        };
+    }
+
+    /**
+     * Transfers bytes from this channel's file to the given channel's file or socket.
+     * @return the number of bytes transferred, UNSUPPORTED_CASE if this transfer cannot
+     * be done directly, or UNSUPPORTED if there is no direct support
+     */
+    private long transferToDirect(long position, int count, WritableByteChannel target)
+        throws IOException
+    {
+        if (transferToDirectNotSupported)
+            return IOStatus.UNSUPPORTED;
+        if (target instanceof SelectableChannel sc && !nd.canTransferToDirectly(sc))
+            return IOStatus.UNSUPPORTED_CASE;
+
+        long n;
         if (nd.transferToDirectlyNeedsPositionLock()) {
             synchronized (positionLock) {
                 long pos = position();
                 try {
-                    return transferToDirectlyInternal(position, icount,
-                                                      target, targetFD);
+                    n = transferToDirectInternal(position, count, target);
                 } finally {
-                    position(pos);
+                    try {
+                        position(pos);
+                    } catch (ClosedChannelException ignore) {
+                        // can't reset position if channel is closed
+                    }
                 }
             }
         } else {
-            return transferToDirectlyInternal(position, icount, target, targetFD);
+            n = transferToDirectInternal(position, count, target);
         }
+        if (n == IOStatus.UNSUPPORTED) {
+            transferToDirectNotSupported = true;
+        }
+        return n;
     }
 
     // Size threshold above which to use a mapped buffer;
@@ -654,6 +751,10 @@ public class FileChannelImpl
     // Maximum size to map when using a mapped buffer
     private static final long MAPPED_TRANSFER_SIZE = 8L*1024L*1024L;
 
+    /**
+     * Transfers bytes from channel's file to the given channel. This implementation
+     * memory maps this channel's file.
+     */
     private long transferToTrustedChannel(long position, long count,
                                           WritableByteChannel target)
         throws IOException
@@ -663,25 +764,24 @@ public class FileChannelImpl
 
         boolean isSelChImpl = (target instanceof SelChImpl);
         if (!((target instanceof FileChannelImpl) || isSelChImpl))
-            return IOStatus.UNSUPPORTED;
+            return IOStatus.UNSUPPORTED_CASE;
 
         if (target == this) {
             long posThis = position();
-            if (posThis - count + 1 <= position &&
-                position - count + 1 <= posThis &&
-                !nd.canTransferToFromOverlappedMap()) {
+            if ((posThis - count + 1 <= position)
+                    && (position - count + 1 <= posThis)
+                    && !nd.canTransferToFromOverlappedMap()) {
                 return IOStatus.UNSUPPORTED_CASE;
             }
         }
 
-        // Trusted target: Use a mapped buffer
         long remaining = count;
         while (remaining > 0L) {
             long size = Math.min(remaining, MAPPED_TRANSFER_SIZE);
             try {
                 MappedByteBuffer dbb = map(MapMode.READ_ONLY, position, size);
                 try {
-                    // ## Bug: Closing this channel will not terminate the write
+                    // write may block, closing this channel will not wake it up
                     int n = target.write(dbb);
                     assert n >= 0;
                     remaining -= n;
@@ -694,16 +794,6 @@ public class FileChannelImpl
                 } finally {
                     unmap(dbb);
                 }
-            } catch (ClosedByInterruptException e) {
-                // target closed by interrupt as ClosedByInterruptException needs
-                // to be thrown after closing this channel.
-                assert !target.isOpen();
-                try {
-                    close();
-                } catch (Throwable suppressed) {
-                    e.addSuppressed(suppressed);
-                }
-                throw e;
             } catch (IOException ioe) {
                 // Only throw exception if no bytes have been written
                 if (remaining == count)
@@ -714,24 +804,26 @@ public class FileChannelImpl
         return count - remaining;
     }
 
+    /**
+     * Transfers bytes from channel's file to the given channel.
+     */
     private long transferToArbitraryChannel(long position, long count,
                                             WritableByteChannel target)
         throws IOException
     {
         // Untrusted target: Use a newly-erased buffer
-        int c = (int)Math.min(count, TRANSFER_SIZE);
+        int c = (int) Math.min(count, TRANSFER_SIZE);
         ByteBuffer bb = ByteBuffer.allocate(c);
         long tw = 0;                    // Total bytes written
         long pos = position;
         try {
             while (tw < count) {
-                bb.limit((int)Math.min(count - tw, TRANSFER_SIZE));
+                bb.limit((int) Math.min(count - tw, TRANSFER_SIZE));
                 int nr = read(bb, pos);
                 if (nr <= 0)
                     break;
                 bb.flip();
-                // ## Bug: Will block writing target if this channel
-                // ##      is asynchronously closed
+                // write may block, closing this channel will not wake it up
                 int nw = target.write(bb);
                 tw += nw;
                 if (nw != nr)
@@ -747,8 +839,8 @@ public class FileChannelImpl
         }
     }
 
-    public long transferTo(long position, long count,
-                           WritableByteChannel target)
+    @Override
+    public long transferTo(long position, long count, WritableByteChannel target)
         throws IOException
     {
         ensureOpen();
@@ -756,91 +848,109 @@ public class FileChannelImpl
             throw new ClosedChannelException();
         if (!readable)
             throw new NonReadableChannelException();
-        if (target instanceof FileChannelImpl &&
-            !((FileChannelImpl)target).writable)
+        if (target instanceof FileChannelImpl && !((FileChannelImpl) target).writable)
             throw new NonWritableChannelException();
         if ((position < 0) || (count < 0))
             throw new IllegalArgumentException();
-        long sz = size();
-        if (position > sz)
-            return 0;
 
-        if ((sz - position) < count)
-            count = sz - position;
-
-        // Attempt a direct transfer, if the kernel supports it, limiting
-        // the number of bytes according to which platform
-        int icount = (int)Math.min(count, MAX_DIRECT_TRANSFER_SIZE);
-        long n;
-        if ((n = transferToDirectly(position, icount, target)) >= 0)
-            return n;
-
-        // Attempt a mapped transfer, but only to trusted channel types
-        if ((n = transferToTrustedChannel(position, count, target)) >= 0)
-            return n;
-
-        // Slow path for untrusted targets
-        return transferToArbitraryChannel(position, count, target);
-    }
-
-    // Assume at first that the underlying kernel supports copy_file_range();
-    // set this to true if we find out later that it doesn't
-    //
-    private static volatile boolean transferFromNotSupported;
-
-    private long transferFromDirectlyInternal(FileDescriptor srcFD,
-                                              long position, long count)
-        throws IOException
-    {
-        long n = -1;
-        int ti = -1;
         try {
-            beginBlocking();
-            ti = threads.add();
-            if (!isOpen())
-                return -1;
-            do {
-                long comp = Blocker.begin();
-                try {
-                    boolean append = fdAccess.getAppend(fd);
-                    n = transferFrom0(srcFD, fd, position, count, append);
-                } finally {
-                    Blocker.end(comp);
-                }
-            } while ((n == IOStatus.INTERRUPTED) && isOpen());
-            if (n == IOStatus.UNSUPPORTED) {
-                // Don't bother trying again
-                transferFromNotSupported = true;
-                return IOStatus.UNSUPPORTED;
+            final long sz = size();
+            if (position > sz)
+                return 0;
+
+            // Now position <= sz so remaining >= 0 and
+            // remaining == 0 if and only if sz == 0
+            long remaining = sz - position;
+
+            // Adjust count only if remaining > 0, i.e.,
+            // sz > position which means sz > 0
+            if (remaining > 0 && remaining < count)
+                count = remaining;
+
+            // System calls supporting fast transfers might not work on files
+            // which advertise zero size such as those in Linux /proc
+            if (sz > 0) {
+                // Attempt a direct transfer, if the kernel supports it, limiting
+                // the number of bytes according to which platform
+                int icount = (int) Math.min(count, nd.maxDirectTransferSize());
+                long n;
+                if ((n = transferToDirect(position, icount, target)) >= 0)
+                    return n;
+
+                // Attempt a mapped transfer, but only to trusted channel types
+                if ((n = transferToTrustedChannel(position, count, target)) >= 0)
+                    return n;
             }
-            return IOStatus.normalize(n);
-        } finally {
-            threads.remove(ti);
-            end (n > -1);
+
+            // fallback to read/write loop
+            return transferToArbitraryChannel(position, count, target);
+        } catch (ClosedChannelException e) {
+            // throw AsynchronousCloseException or ClosedByInterruptException
+            throw transferFailed(e, target);
         }
     }
 
-    private long transferFromDirectly(FileChannelImpl src,
-                                      long position, long count)
-        throws IOException
-    {
-        if (!src.readable)
-            throw new NonReadableChannelException();
-        if (transferFromNotSupported)
-            return IOStatus.UNSUPPORTED;
-        FileDescriptor srcFD = src.fd;
-        if (srcFD == null)
-            return IOStatus.UNSUPPORTED_CASE;
-
-        return transferFromDirectlyInternal(srcFD, position, count);
+    /**
+     * Transfers bytes into this channel's file from the resource that the given file
+     * descriptor is connected to.
+     */
+    private long transferFromFileDescriptor(FileDescriptor srcFD, long position, long count) {
+        long n;
+        boolean append = fdAccess.getAppend(fd);
+        do {
+            long comp = Blocker.begin();
+            try {
+                n = nd.transferFrom(srcFD, fd, position, count, append);
+            } finally {
+                Blocker.end(comp);
+            }
+        } while ((n == IOStatus.INTERRUPTED) && isOpen());
+        return n;
     }
 
-    private long transferFromFileChannel(FileChannelImpl src,
-                                         long position, long count)
+    /**
+     * Transfers bytes into this channel's file from the given channel's file. This
+     * implementation uses copy_file_range or equivalent.
+     */
+    private long transferFromDirect(FileChannelImpl src, long position, long count)
         throws IOException
     {
-        if (!src.readable)
-            throw new NonReadableChannelException();
+        if (transferFromDirectNotSupported)
+            return IOStatus.UNSUPPORTED;
+
+        final FileChannelImpl target = this;
+        boolean completed = false;
+        try {
+            beginBlocking();
+            int srcIndex = src.beforeTransfer();
+            try {
+                int targetIndex = target.beforeTransfer();
+                try {
+                    long n = transferFromFileDescriptor(src.fd, position, count);
+                    if (n == IOStatus.UNSUPPORTED) {
+                        transferFromDirectNotSupported = true;
+                        return IOStatus.UNSUPPORTED;
+                    }
+                    completed = (n >= 0);
+                    return IOStatus.normalize(n);
+                } finally {
+                    target.afterTransfer(completed, targetIndex);
+                }
+            } finally {
+                src.afterTransfer(completed, srcIndex);
+            }
+        } finally {
+            endBlocking(completed);
+        }
+    }
+
+    /**
+     * Transfers bytes into this channel's file from the given channel's file. This
+     * implementation memory maps the given channel's file.
+     */
+    private long transferFromFileChannel(FileChannelImpl src, long position, long count)
+        throws IOException
+    {
         if (count < MAPPED_TRANSFER_THRESHOLD)
             return IOStatus.UNSUPPORTED_CASE;
 
@@ -848,19 +958,17 @@ public class FileChannelImpl
             long pos = src.position();
             long max = Math.min(count, src.size() - pos);
 
-            if (src == this) {
-                if (position() - max + 1 <= pos &&
-                    pos - max + 1 <= position() &&
-                    !nd.canTransferToFromOverlappedMap()) {
-                    return IOStatus.UNSUPPORTED_CASE;
-                }
+            if (src == this
+                    && (position() - max + 1 <= pos)
+                    && (pos - max + 1 <= position())
+                    && !nd.canTransferToFromOverlappedMap()) {
+                return IOStatus.UNSUPPORTED_CASE;
             }
 
             long remaining = max;
             long p = pos;
             while (remaining > 0L) {
                 long size = Math.min(remaining, MAPPED_TRANSFER_SIZE);
-                // ## Bug: Closing this channel will not terminate the write
                 MappedByteBuffer bb = src.map(MapMode.READ_ONLY, p, size);
                 try {
                     long n = write(bb, position);
@@ -885,20 +993,21 @@ public class FileChannelImpl
 
     private static final int TRANSFER_SIZE = 8192;
 
+    /**
+     * Transfers bytes into this channel's file from the given channel.
+     */
     private long transferFromArbitraryChannel(ReadableByteChannel src,
                                               long position, long count)
         throws IOException
     {
-        // Untrusted target: Use a newly-erased buffer
-        int c = (int)Math.min(count, TRANSFER_SIZE);
+        int c = (int) Math.min(count, TRANSFER_SIZE);
         ByteBuffer bb = ByteBuffer.allocate(c);
         long tw = 0;                    // Total bytes written
         long pos = position;
         try {
             while (tw < count) {
-                bb.limit((int)Math.min((count - tw), (long)TRANSFER_SIZE));
-                // ## Bug: Will block reading src if this channel
-                // ##      is asynchronously closed
+                bb.limit((int) Math.min((count - tw), TRANSFER_SIZE));
+                // read may block, closing this channel will not wake it up
                 int nr = src.read(bb);
                 if (nr <= 0)
                     break;
@@ -918,31 +1027,40 @@ public class FileChannelImpl
         }
     }
 
-    public long transferFrom(ReadableByteChannel src,
-                             long position, long count)
+    @Override
+    public long transferFrom(ReadableByteChannel src, long position, long count)
         throws IOException
     {
         ensureOpen();
         if (!src.isOpen())
             throw new ClosedChannelException();
+        if (src instanceof FileChannelImpl fci && !fci.readable)
+            throw new NonReadableChannelException();
         if (!writable)
             throw new NonWritableChannelException();
         if ((position < 0) || (count < 0))
             throw new IllegalArgumentException();
-        if (position > size())
-            return 0;
 
-        if (src instanceof FileChannelImpl fci) {
-            long n;
-            if ((n = transferFromDirectly(fci, position, count)) >= 0)
-                return n;
-            if ((n = transferFromFileChannel(fci, position, count)) >= 0)
-                return n;
+        try {
+            // System calls supporting fast transfers might not work on files
+            // which advertise zero size such as those in Linux /proc
+            if (src instanceof FileChannelImpl fci && fci.size() > 0) {
+                long n;
+                if ((n = transferFromDirect(fci, position, count)) >= 0)
+                    return n;
+                if ((n = transferFromFileChannel(fci, position, count)) >= 0)
+                    return n;
+            }
+
+            // fallback to read/write loop
+            return transferFromArbitraryChannel(src, position, count);
+        } catch (ClosedChannelException e) {
+            // throw AsynchronousCloseException or ClosedByInterruptException
+            throw transferFailed(e, src);
         }
-
-        return transferFromArbitraryChannel(src, position, count);
     }
 
+    @Override
     public int read(ByteBuffer dst, long position) throws IOException {
         if (dst == null)
             throw new NullPointerException();
@@ -988,6 +1106,7 @@ public class FileChannelImpl
         }
     }
 
+    @Override
     public int write(ByteBuffer src, long position) throws IOException {
         if (src == null)
             throw new NullPointerException();
@@ -1038,9 +1157,6 @@ public class FileChannelImpl
     private abstract static class Unmapper
         implements Runnable, UnmapperProxy
     {
-        // may be required to close file
-        private static final NativeDispatcher nd = new FileDispatcherImpl();
-
         private volatile long address;
         protected final long size;
         protected final long cap;
@@ -1080,7 +1196,7 @@ public class FileChannelImpl
         public void unmap() {
             if (address == 0)
                 return;
-            unmap0(address, size);
+            nd.unmap(address, size);
             address = 0;
 
             // if this mapping has a valid file descriptor then we close it
@@ -1175,6 +1291,7 @@ public class FileChannelImpl
     private static final int MAP_RW = 1;
     private static final int MAP_PV = 2;
 
+    @Override
     public MappedByteBuffer map(MapMode mode, long position, long size) throws IOException {
         if (size > Integer.MAX_VALUE)
             throw new IllegalArgumentException("Size exceeds Integer.MAX_VALUE");
@@ -1202,13 +1319,12 @@ public class FileChannelImpl
     }
 
     @Override
-    public MemorySegment map(MapMode mode, long offset, long size,
-                             MemorySession session)
-            throws IOException
+    public MemorySegment map(MapMode mode, long offset, long size, Arena arena)
+        throws IOException
     {
         Objects.requireNonNull(mode,"Mode is null");
-        Objects.requireNonNull(session, "Session is null");
-        MemorySessionImpl sessionImpl = MemorySessionImpl.toSessionImpl(session);
+        Objects.requireNonNull(arena, "Arena is null");
+        MemorySessionImpl sessionImpl = MemorySessionImpl.toMemorySession(arena);
         sessionImpl.checkValidState();
         if (offset < 0)
             throw new IllegalArgumentException("Requested bytes offset must be >= 0.");
@@ -1225,7 +1341,7 @@ public class FileChannelImpl
         if (unmapper != null) {
             AbstractMemorySegmentImpl segment =
                 new MappedMemorySegmentImpl(unmapper.address(), unmapper, size,
-                                            readOnly, session);
+                                            readOnly, sessionImpl);
             MemorySessionImpl.ResourceList.ResourceCleanup resource =
                 new MemorySessionImpl.ResourceList.ResourceCleanup() {
                     @Override
@@ -1236,7 +1352,7 @@ public class FileChannelImpl
             sessionImpl.addOrCleanupIfFail(resource);
             return segment;
         } else {
-            return new MappedMemorySegmentImpl.EmptyMappedMemorySegmentImpl(readOnly, sessionImpl);
+            return new MappedMemorySegmentImpl(0, null, 0, readOnly, sessionImpl);
         }
     }
 
@@ -1299,12 +1415,12 @@ public class FileChannelImpl
                     return null;
                 }
 
-                pagePosition = (int)(position % allocationGranularity);
+                pagePosition = (int)(position % nd.allocationGranularity());
                 long mapPosition = position - pagePosition;
                 mapSize = size + pagePosition;
                 try {
-                    // If map0 did not throw an exception, the address is valid
-                    addr = map0(fd, prot, mapPosition, mapSize, isSync);
+                    // If map did not throw an exception, the address is valid
+                    addr = nd.map(fd, prot, mapPosition, mapSize, isSync);
                 } catch (OutOfMemoryError x) {
                     // An OutOfMemoryError may indicate that we've exhausted
                     // memory so force gc and re-attempt map
@@ -1315,7 +1431,7 @@ public class FileChannelImpl
                         Thread.currentThread().interrupt();
                     }
                     try {
-                        addr = map0(fd, prot, mapPosition, mapSize, isSync);
+                        addr = nd.map(fd, prot, mapPosition, mapSize, isSync);
                     } catch (OutOfMemoryError y) {
                         // After a second OOME, fail
                         throw new IOException("Map failed", y);
@@ -1329,15 +1445,15 @@ public class FileChannelImpl
             try {
                 mfd = nd.duplicateForMapping(fd);
             } catch (IOException ioe) {
-                unmap0(addr, mapSize);
+                nd.unmap(addr, mapSize);
                 throw ioe;
             }
 
             assert (IOStatus.checkAll(addr));
-            assert (addr % allocationGranularity == 0);
+            assert (addr % nd.allocationGranularity() == 0);
             Unmapper um = (isSync
-                           ? new SyncUnmapper(addr, mapSize, size, mfd, pagePosition)
-                           : new DefaultUnmapper(addr, mapSize, size, mfd, pagePosition));
+                ? new SyncUnmapper(addr, mapSize, size, mfd, pagePosition)
+                : new DefaultUnmapper(addr, mapSize, size, mfd, pagePosition));
             return um;
         } finally {
             threads.remove(ti);
@@ -1457,6 +1573,7 @@ public class FileChannelImpl
         return fileLockTable;
     }
 
+    @Override
     public FileLock lock(long position, long size, boolean shared)
         throws IOException
     {
@@ -1509,6 +1626,7 @@ public class FileChannelImpl
         return fli;
     }
 
+    @Override
     public FileLock tryLock(long position, long size, boolean shared)
         throws IOException
     {
@@ -1560,38 +1678,5 @@ public class FileChannelImpl
         }
         assert fileLockTable != null;
         fileLockTable.remove(fli);
-    }
-
-    // -- Native methods --
-
-    // Creates a new mapping
-    private native long map0(FileDescriptor fd, int prot, long position,
-                             long length, boolean isSync)
-        throws IOException;
-
-    // Removes an existing mapping
-    private static native int unmap0(long address, long length);
-
-    // Transfers from src to dst, or returns IOStatus.UNSUPPORTED (-4) or
-    // IOStatus.UNSUPPORTED_CASE (-6) if the kernel does not support it
-    private static native long transferTo0(FileDescriptor src, long position,
-                                           long count, FileDescriptor dst,
-                                           boolean append);
-
-    private static native long transferFrom0(FileDescriptor src,
-                                             FileDescriptor dst,
-                                             long position, long count,
-                                             boolean append);
-
-    // Retrieves the maximum size of a transfer
-    private static native int maxDirectTransferSize0();
-
-    // Retrieves allocation granularity
-    private static native long allocationGranularity0();
-
-    static {
-        IOUtil.load();
-        allocationGranularity = allocationGranularity0();
-        MAX_DIRECT_TRANSFER_SIZE = maxDirectTransferSize0();
     }
 }
